[package]
name = "herlin-worker"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>"]
edition = "2018"
description = "Api worker for personal website"
repository = "https://github.com/Herlix/herlin-worker"
homepage = "https://github.com/Herlix/herlin-worker"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "rest", "wasm", "rust"]
categories = ["serverless", "cloudflare workers"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
cfg-if = "0.1.10"
wasm-bindgen = { version = "0.2", features=["serde-serialize"] }
wasm-bindgen-futures = "0.4.10"
serde_json = "1.0.52"
serde = { version="1.0.106", features = ["derive"] }
url = "2.1.1"
js-sys = "0.3.37"

kv_derive = { path = "./kv_derive" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.10"
test-case="1.0.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
