[package]
name = "pollen_keyvault"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>"]
edition = "2018"
description = "Cloudflare keyvault binding and logic"
repository = "https://github.com/Herlix/herlin-worker"
homepage = "https://github.com/Herlix/herlin-worker"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "rest", "wasm"]
categories = ["serverless", "cloudflare workers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version="1.0", features = ["derive"] }
wasm-bindgen = { version="0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"